[gd_scene load_steps=10 format=3 uid="uid://cerqddygybdld"]

[ext_resource type="Script" path="res://tools/minigames/rhythm/hit_objects/slider/hit_slider.gd" id="1_ad16d"]
[ext_resource type="Shader" path="res://tools/minigames/rhythm/hit_objects/slider/slider.gdshader" id="2_em161"]
[ext_resource type="Texture2D" uid="uid://crn7dcukn87j2" path="res://tools/minigames/rhythm/assets/hit_slider_end.png" id="3_2jqwx"]
[ext_resource type="Texture2D" uid="uid://cg4m6x2d1nxkg" path="res://tools/minigames/rhythm/assets/hit_slider_body.png" id="4_olsyx"]

[sub_resource type="QuadMesh" id="QuadMesh_7fr1q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wnxio"]
render_priority = 0
shader = ExtResource("2_em161")
shader_parameter/miss_color = Color(0.25, 0.085, 0.05, 1)
shader_parameter/tex = ExtResource("3_2jqwx")

[sub_resource type="QuadMesh" id="QuadMesh_lwq8e"]
orientation = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6x0sm"]
render_priority = 0
shader = ExtResource("2_em161")
shader_parameter/miss_color = Color(0.25, 0.085, 0.05, 1)
shader_parameter/tex = ExtResource("4_olsyx")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_th64q"]
render_priority = 0
shader = ExtResource("2_em161")
shader_parameter/miss_color = Color(0.25, 0.085, 0.05, 1)
shader_parameter/tex = ExtResource("3_2jqwx")

[node name="HitSlider" type="Node3D"]
script = ExtResource("1_ad16d")

[node name="Meshes" type="Node3D" parent="."]

[node name="FrontEnd" type="MeshInstance3D" parent="Meshes"]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_7fr1q")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_wnxio")

[node name="Body" type="MeshInstance3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
mesh = SubResource("QuadMesh_lwq8e")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_6x0sm")

[node name="BackEnd" type="MeshInstance3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -1)
mesh = SubResource("QuadMesh_7fr1q")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_th64q")
